[Vulkan SDK] Remove Vulkan SDK from the repository

--- a/Src/Basic/2-SingleTriangle/CMakeLists.txt
+++ b/Src/Basic/2-SingleTriangle/CMakeLists.txt
@@ -18,7 +18,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_ROOT_DIR}/Bin/Release")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_ROOT_DIR}/Bin/Debug")
 
 # include directories
-include_directories( "${PROJECT_ROOT_DIR}/ThirdParty/VulkanSDK/Include" )
+include_directories( "${PROJECT_ROOT_DIR}/Dependencies/VulkanSDK(1.2.148.0)/Include" )
+
+# library folder to link from
+link_directories( "${PROJECT_ROOT_DIR}/Dependencies/VulkanSDK(1.2.148.0)/Lib" )
 
 macro(RemoveDebugCXXFlag flag)
     string(REPLACE "${flag}" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
