--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,23 @@ jobs:
     steps:
     - name: Checking Out Source Code
       uses: actions/checkout@v2
+    - name: Setup MSBuild.exe
+      uses: warrenbuckley/Setup-MSBuild@v1
+    - name: Get Cache Directory
+      id: cache-dir
+      run: |
+           echo ::set-output name=dir::%CD%
+      shell: cmd
+    - name: Load Dependencies from Cache
+      uses: actions/cache@v1
+      id: cache-dep
+      with:
+        path: ${{ steps.cache-dir.outputs.dir }}/Dependencies
+        key: Windows-dep-ver-0
+    - name: Install Dependencies
+      if: steps.cache-dep.outputs.cache-hit != 'true'
+      run: make update_dep
+      shell: cmd
     - name: Build Release
       run: make release
       shell: cmd
