--- a/Src/Basic/2-SingleTriangle/CMakeLists.txt
+++ b/Src/Basic/2-SingleTriangle/CMakeLists.txt
@@ -5,19 +5,34 @@
 
 file(GLOB_RECURSE project_headers *.h)
 file(GLOB_RECURSE project_cpps *.cpp)
-file(GLOB_RECURSE project_vs_shader vs.hlsl)
-file(GLOB_RECURSE project_ps_shader ps.hlsl)
-set(project_shaders ${project_vs_shader} ${project_ps_shader})
+file(GLOB_RECURSE project_hlsl_vs_shader vs.hlsl)
+file(GLOB_RECURSE project_hlsl_ps_shader ps.hlsl)
+set(project_hlsl_shaders ${project_hlsl_vs_shader} ${project_hlsl_ps_shader})
+file(GLOB_RECURSE project_glsl_vs_shader vs.vert.glsl)
+file(GLOB_RECURSE project_glsl_ps_shader ps.frag.glsl)
+set(project_glsl_shaders ${project_glsl_vs_shader} ${project_glsl_ps_shader})
 
-set(generated_src ${CMAKE_CURRENT_SOURCE_DIR}/d3d12/shaders/generated_vs.h ${CMAKE_CURRENT_SOURCE_DIR}/d3d12/shaders/generated_ps.h)
+set(generated_hlsl_headers ${CMAKE_CURRENT_SOURCE_DIR}/d3d12/shaders/generated_vs.h ${CMAKE_CURRENT_SOURCE_DIR}/d3d12/shaders/generated_ps.h)
+set(generate_spirv_headers ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/generated_vs.h ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/generated_ps.h)
 
 # The header files won't be generated until compiling, this is just a workaround to indicate CMake that these files will be generated.
 # Ideally, if there is a way to locate fxc, I can also generate the header file here, which is a lot better.
-add_custom_command( OUTPUT ${generated_src}
+add_custom_command( OUTPUT ${generated_hlsl_headers}
                     COMMAND call >> generated_vs.h | call >> generated_ps.h
                     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/d3d12/shaders/)
 
-set(all_files ${project_headers} ${project_cpps} ${project_shaders} ${generated_src})
+# I will find time to clean this later
+add_custom_command( OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/generated_vs.h
+                    COMMAND ${Python_EXECUTABLE} ${SPIRV_GENERATE_SCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/vs.vert.glsl ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/generated_vs.h ${GLSLANG_VALIDATOR}
+                    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+                    DEPENDS ${PROJECT_ROOT_DIR}/Scripts/generate_spirv.py ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/vs.vert.glsl ${GLSLANG_VALIDATOR})
+
+add_custom_command( OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/generated_ps.h
+                    COMMAND ${Python_EXECUTABLE} ${SPIRV_GENERATE_SCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/ps.frag.glsl ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/generated_ps.h ${GLSLANG_VALIDATOR}
+                    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+                    DEPENDS ${PROJECT_ROOT_DIR}/Scripts/generate_spirv.py ${CMAKE_CURRENT_SOURCE_DIR}/vulkan/shaders/ps.frag.glsl ${GLSLANG_VALIDATOR})
+
+set(all_files ${project_headers} ${project_cpps} ${project_hlsl_shaders} ${project_glsl_shaders} ${generated_hlsl_headers} ${generate_spirv_headers})
 source_group_by_dir(all_files)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_ROOT_DIR}/Bin")
@@ -59,14 +74,14 @@ set_target_properties( SingleTriangle PROPERTIES DEBUG_OUTPUT_NAME "1_single_tri
 set_property(TARGET SingleTriangle PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/$(Configuration)")
 
 # setup shader compiling steps
-set_property(SOURCE ${project_shaders}      PROPERTY VS_SHADER_ENTRYPOINT   main)
-set_property(SOURCE ${project_shaders}      PROPERTY VS_SHADER_MODEL        5.1)
-set_property(SOURCE ${project_vs_shader}    PROPERTY VS_SHADER_TYPE         Vertex)
-set_property(SOURCE ${project_ps_shader}    PROPERTY VS_SHADER_TYPE         Pixel)
-set_property(SOURCE ${project_vs_shader}    PROPERTY VS_SHADER_OUTPUT_HEADER_FILE     "${CMAKE_CURRENT_SOURCE_DIR}/d3d12/shaders/generated_vs.h")
-set_property(SOURCE ${project_vs_shader}    PROPERTY VS_SHADER_VARIABLE_NAME          "g_shader_vs")
-set_property(SOURCE ${project_ps_shader}    PROPERTY VS_SHADER_OUTPUT_HEADER_FILE     "${CMAKE_CURRENT_SOURCE_DIR}/d3d12/shaders/generated_ps.h")
-set_property(SOURCE ${project_ps_shader}    PROPERTY VS_SHADER_VARIABLE_NAME          "g_shader_ps")
+set_property(SOURCE ${project_hlsl_shaders}         PROPERTY VS_SHADER_ENTRYPOINT   main)
+set_property(SOURCE ${project_hlsl_shaders}         PROPERTY VS_SHADER_MODEL        5.1)
+set_property(SOURCE ${project_hlsl_vs_shader}       PROPERTY VS_SHADER_TYPE         Vertex)
+set_property(SOURCE ${project_hlsl_ps_shader}       PROPERTY VS_SHADER_TYPE         Pixel)
+set_property(SOURCE ${project_hlsl_vs_shader}       PROPERTY VS_SHADER_OUTPUT_HEADER_FILE     "${CMAKE_CURRENT_SOURCE_DIR}/d3d12/shaders/generated_vs.h")
+set_property(SOURCE ${project_hlsl_vs_shader}       PROPERTY VS_SHADER_VARIABLE_NAME          "g_shader_vs")
+set_property(SOURCE ${project_hlsl_ps_shader}       PROPERTY VS_SHADER_OUTPUT_HEADER_FILE     "${CMAKE_CURRENT_SOURCE_DIR}/d3d12/shaders/generated_ps.h")
+set_property(SOURCE ${project_hlsl_ps_shader}       PROPERTY VS_SHADER_VARIABLE_NAME          "g_shader_ps")
 
 # setup project folder
 set_target_properties( SingleTriangle PROPERTIES FOLDER BasicSamples)
